[gd_scene load_steps=2 format=3 uid="uid://bo6fanmfn38vg"]

[ext_resource type="Script" path="res://UI/Menu/Option_Menu.gd" id="1_u0k0p"]

[node name="Menue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0k0p")

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 956.0
offset_top = 19.0
offset_right = 1127.0
offset_bottom = 140.0
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 71.0
offset_top = 47.0
offset_right = 198.0
offset_bottom = 81.0
text = "Volume"

[node name="Volume" type="HSlider" parent="RichTextLabel"]
layout_mode = 2
offset_left = 67.0
offset_top = 4.0
offset_right = 144.0
offset_bottom = 20.0

[node name="Controle" type="Button" parent="."]
layout_mode = 0
offset_left = 663.0
offset_top = 22.0
offset_right = 912.0
offset_bottom = 64.0
text = "Controle
"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="RichTextLabel/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Controle" to="." method="_on_controle_pressed"]
